[gd_scene load_steps=6 format=3 uid="uid://cptjojufy1uph"]

[ext_resource type="Script" path="res://objs/drone/def_drone.gd" id="1_occs6"]
[ext_resource type="PackedScene" uid="uid://nrxmexj3jb3n" path="res://assets/3d/combat_drone/combat_drone.blend" id="3_ldky7"]
[ext_resource type="AudioStream" uid="uid://cm0kf6yv8v5iu" path="res://assets/audio/drone_propellers.wav" id="3_q3avb"]

[sub_resource type="BoxShape3D" id="BoxShape3D_engpj"]
size = Vector3(3, 1.5, 3)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_miohr"]
height = 4.0
radius = 10.0

[node name="def_drone" type="CharacterBody3D"]
collision_layer = 16
collision_mask = 32
script = ExtResource("1_occs6")

[node name="collision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_engpj")

[node name="box_location" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="audio_movement" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_q3avb")
volume_db = 12.973
doppler_tracking = 2

[node name="combat_drone" parent="." instance=ExtResource("3_ldky7")]

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 32

[node name="collision" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_miohr")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
